--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo for using `hilucsi4py` #\n",
-    "In this example, we show how to use `hilucs4py` MILU preconditioner coupling with the built-in FGMRES solver.. The example system is a saddle-point formulation of 3D Stokes equation with Taylor-Hood elements."
+    "# Demo for using `hifir4py` #\n",
+    "In this example, we show how to use `hifir4py` HIFIR preconditioner coupling with the built-in GMRES solver.. The example system is a saddle-point formulation of 3D Stokes equation with Taylor-Hood elements."
    ]
   },
   {
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hilucsi4py import *\n",
+    "from hifir4py import *\n",
     "import numpy as np"
    ]
   },
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The matrix is stored by the HILUCSI native binary format that is leading symmetric block aware. It's worht noting that. The following code shows how to load the matrix."
+    "The matrix is stored by the HIFIR native binary format that is leading symmetric block aware. It's worht noting that. The following code shows how to load the matrix."
    ]
   },
   {
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# load matrix and leading block size m\n",
-    "rowptr, colind, vals, shape, m = read_hilucsi('demo_inputs/A.hilucsi')"
+    "rowptr, colind, vals, shape, _ = read_hifir(\"demo_inputs/A.hilucsi\")"
    ]
   },
   {
@@ -51,13 +51,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The system shape is 44632, where the nnz is (2990, 2990), leading block is 0\n"
+      "The system shape is 44632, where the nnz is (2990, 2990)\n"
      ]
     }
    ],
    "source": [
     "# A is scipy.sparse.csr_matrix\n",
-    "print('The system shape is {}, where the nnz is {}, leading block is {}'.format(rowptr[-1], shape, m))"
+    "print(\"The system shape is {}, where the nnz is {}\".format(rowptr[-1], shape))"
    ]
   },
   {
@@ -103,29 +103,28 @@
      "text": [
       "\n",
       "=======================================================================\n",
-      "|    Hierarchical ILU Crout with Scalability and Inverse Thresholds   |\n",
+      "|           Hybrid (Hierarchical) Incomplete Factorizations           |\n",
       "|                                                                     |\n",
-      "| HILUCSI is a package for computing multilevel incomplete LU factor- |\n",
-      "| ization with nearly linear time complexity. In addition, HILUCSI    |\n",
-      "| can also be very robust.                                            |\n",
+      "| HIF is a package for computing hybrid (hierarchical) incomplete fa- |\n",
+      "| ctorizations with nearly linear time complexity.                    |\n",
       "-----------------------------------------------------------------------\n",
       "\n",
-      " Package information:\n",
+      " > Package information:\n",
       "\n",
-      "\t\tCopyright (C) The HILUCSI AUTHORS\n",
-      "\t\tVersion: 1.0.0\n",
-      "\t\tBuilt on: 23:01:07, Jul 12 2019\n",
+      "\t\t* Copyright (C) The HIF AUTHORS\n",
+      "\t\t* Version: 1.0.0\n",
+      "\t\t* Built on: 11:33:49, Jun  7 2021\n",
       "\n",
       "=======================================================================\n",
       "\n",
-      "Options (control parameters) are:\n",
+      "Params (control parameters) are:\n",
       "\n",
       "tau_L                         0.000100\n",
       "tau_U                         0.000100\n",
-      "tau_d                         3.000000\n",
-      "tau_kappa                     3.000000\n",
-      "alpha_L                       10\n",
-      "alpha_U                       10\n",
+      "kappa_d                       3.000000\n",
+      "kappa                         3.000000\n",
+      "alpha_L                       10.000000\n",
+      "alpha_U                       10.000000\n",
       "rho                           0.500000\n",
       "c_d                           10.000000\n",
       "c_h                           2.000000\n",
@@ -133,27 +132,34 @@
       "verbose                       info\n",
       "rf_par                        1\n",
       "reorder                       Auto\n",
-      "saddle                        1\n",
-      "pre_reorder                   Off\n",
-      "pre_reorder_lvl1              1\n",
-      "matching                      Auto\n",
+      "spd                           0\n",
+      "check                         yes\n",
       "pre_scale                     0\n",
       "symm_pre_lvls                 1\n",
+      "threads                       0\n",
+      "mumps_blr                     1\n",
+      "fat_schur_1st                 0\n",
+      "rrqr_cond                     0.000000\n",
+      "pivot                         off\n",
+      "gamma                         1.000000\n",
+      "beta                          1000.000000\n",
+      "is_symm                       0\n",
+      "no_pre                        0\n",
       "\n",
       "perform input matrix validity checking\n",
       "\n",
       "enter level 1 (asymmetric).\n",
       "\n",
-      "performing symm preprocessing with leading block size 2990...\n",
+      "performing symm preprocessing with leading block size  2990... \n",
       "preprocessing done with leading block size 2826...\n",
-      "time: 0.00306198s\n",
+      "time: 0.00519876s\n",
       "preparing data variables...\n",
       "start Crout update...\n",
       "finish Crout update...\n",
       "\ttotal deferrals=80\n",
-      "\tleading block size in=2826\n",
+      "\tleading block size in=2990\n",
       "\tleading block size out=2746\n",
-      "\tdiff=80\n",
+      "\tdiff=244\n",
       "\tdiag deferrals=14\n",
       "\tinv-norm deferrals=66\n",
       "\tdrop ut=35562\n",
@@ -165,26 +171,34 @@
       "\tmin |kappa_l|=1\n",
       "\tmax |kappa_l|=2.9844\n",
       "\tmax |d|=1\n",
-      "time: 0.023357s\n",
+      "time: 0.0234758s\n",
       "computing Schur complement and assembling Prec...\n",
+      "\t=================================\n",
+      "\tthe Schur compl. has good size\n",
+      "\t=================================\n",
+      "splitting LB and freeing L took 0.00106249s.\n",
+      "splitting UB and freeing U took 0.00108128s.\n",
       "applying dropping on L_E and U_F with alpha_{L,U}=10,10...\n",
-      "nnz(L_E)=100643/78770, nnz(U_F)=100643/78770...\n",
+      "nnz(L_E)=100643/78770, nnz(U_F)=100643/78770, time: 0.000971111s...\n",
+      "using 4 for Schur computation...\n",
+      "pure Schur computation time: 0.0108929s...\n",
       "nnz(S_C)=49836, nnz(L/L_B)=128738/28095, nnz(U/U_B)=128738/28095\n",
       "dense_thres{1,2}=265540/1500...\n",
       "converted Schur complement (S) to dense for last level...\n",
+      "factorizing dense level by RRQR with cond-thres 2.72713e+10...\n",
       "successfully factorized the dense component...\n",
-      "time: 0.0252393s\n",
+      "time: 0.0179087s\n",
       "\n",
       "finish level 1.\n",
       "\n",
       "input nnz(A)=44632, nnz(precs)=141018, ratio=3.15957\n",
       "\n",
-      "multilevel precs building time (overall) is 0.0524915s\n"
+      "multilevel precs building time (overall) is 0.0493023s\n"
      ]
     }
    ],
    "source": [
-    "M = HILUCSI()\n",
+    "M = HIF()\n",
     "M.factorize(rowptr, colind, vals, shape=shape)"
    ]
   },
@@ -225,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solver = FGMRES(M)"
+    "solver = GMRES(M)"
    ]
   },
   {
@@ -237,18 +251,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- FGMRES -\n",
+      "- GMRES -\n",
       "rtol=1e-06\n",
-      "restart=30\n",
+      "restart/cycle=30\n",
       "maxiter=500\n",
-      "kernel: tradition\n",
+      "flex-kernel: tradition\n",
       "init-guess: no\n",
-      "trunc: no\n",
       "\n",
       "Calling traditional GMRES kernel...\n",
       "Enter outer iteration 1...\n",
-      "  At iteration 1 (inner:1), relative residual is 5.01853e-06.\n",
-      "  At iteration 2 (inner:1), relative residual is 1.17415e-08.\n"
+      "  At iteration 1, relative residual is 5.01853e-06.\n",
+      "  At iteration 2, relative residual is 1.17415e-08.\n"
      ]
     }
    ],
@@ -265,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "solver done, with 2 iterations and residule is 1.174147139978338e-08\n"
+      "solver done, with 2 iterations and residule is 1.3711755436588413e-07\n"
      ]
     }
    ],
@@ -290,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
