--- a/examples/demo_scipy.ipynb
+++ b/examples/demo_scipy.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo for using `hilucsi4py` with SciPy sparse matrices #\n",
-    "In this example, we show how to use `hilucs4py` MILU preconditioner coupling with the built-in FGMRES solver.. The example system is a saddle-point formulation of 3D Stokes equation with Taylor-Hood elements."
+    "# Demo for using `hifir4py` with user `Params` and  SciPy sparse matrix#\n",
+    "In this example, we show how to use `hifir4py` HIFIR preconditioner coupling with the built-in GMRES solver.. The example system is a saddle-point formulation of 3D Stokes equation with Taylor-Hood elements."
    ]
   },
   {
@@ -15,15 +15,8 @@
    "outputs": [],
    "source": [
     "from scipy.io import loadmat\n",
-    "from hilucsi4py import *\n",
+    "from hifir4py import *\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The matrix is stored by the HILUCSI native binary format that is leading symmetric block aware. It's worht noting that. The following code shows how to load the matrix."
    ]
   },
   {
@@ -33,9 +26,9 @@
    "outputs": [],
    "source": [
     "# load the MATFILE from scipy.io\n",
-    "f = loadmat('demo_inputs/matlab.mat')\n",
-    "A = f['A']\n",
-    "b = f['b'].reshape(-1)"
+    "f = loadmat(\"demo_inputs/matlab.mat\")\n",
+    "A = f[\"A\"]\n",
+    "b = f[\"b\"].reshape(-1)"
    ]
   },
   {
@@ -67,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's build the preconditioenr $\\boldsymbol{M}$ with default configurations."
+    "Now, let's build the preconditioenr $\\boldsymbol{M}$ with more aggressive options, i.e. `droptol` for L and U factors is 1e-2, `condest` for L, U, and D is 5, and $\\alpha$ for L and U is 3."
    ]
   },
   {
@@ -81,29 +74,28 @@
      "text": [
       "\n",
       "=======================================================================\n",
-      "|    Hierarchical ILU Crout with Scalability and Inverse Thresholds   |\n",
+      "|           Hybrid (Hierarchical) Incomplete Factorizations           |\n",
       "|                                                                     |\n",
-      "| HILUCSI is a package for computing multilevel incomplete LU factor- |\n",
-      "| ization with nearly linear time complexity. In addition, HILUCSI    |\n",
-      "| can also be very robust.                                            |\n",
+      "| HIF is a package for computing hybrid (hierarchical) incomplete fa- |\n",
+      "| ctorizations with nearly linear time complexity.                    |\n",
       "-----------------------------------------------------------------------\n",
       "\n",
-      " Package information:\n",
+      " > Package information:\n",
       "\n",
-      "\t\tCopyright (C) The HILUCSI AUTHORS\n",
-      "\t\tVersion: 1.0.0\n",
-      "\t\tBuilt on: 23:01:07, Jul 12 2019\n",
+      "\t\t* Copyright (C) The HIF AUTHORS\n",
+      "\t\t* Version: 1.0.0\n",
+      "\t\t* Built on: 11:33:49, Jun  7 2021\n",
       "\n",
       "=======================================================================\n",
       "\n",
-      "Options (control parameters) are:\n",
+      "Params (control parameters) are:\n",
       "\n",
-      "tau_L                         0.000100\n",
-      "tau_U                         0.000100\n",
-      "tau_d                         3.000000\n",
-      "tau_kappa                     3.000000\n",
-      "alpha_L                       10\n",
-      "alpha_U                       10\n",
+      "tau_L                         0.010000\n",
+      "tau_U                         0.010000\n",
+      "kappa_d                       5.000000\n",
+      "kappa                         5.000000\n",
+      "alpha_L                       3.000000\n",
+      "alpha_U                       3.000000\n",
       "rho                           0.500000\n",
       "c_d                           10.000000\n",
       "c_h                           2.000000\n",
@@ -111,59 +103,78 @@
       "verbose                       info\n",
       "rf_par                        1\n",
       "reorder                       Auto\n",
-      "saddle                        1\n",
-      "pre_reorder                   Off\n",
-      "pre_reorder_lvl1              1\n",
-      "matching                      Auto\n",
+      "spd                           0\n",
+      "check                         yes\n",
       "pre_scale                     0\n",
       "symm_pre_lvls                 1\n",
+      "threads                       0\n",
+      "mumps_blr                     1\n",
+      "fat_schur_1st                 0\n",
+      "rrqr_cond                     0.000000\n",
+      "pivot                         off\n",
+      "gamma                         1.000000\n",
+      "beta                          1000.000000\n",
+      "is_symm                       0\n",
+      "no_pre                        0\n",
       "\n",
       "perform input matrix validity checking\n",
       "\n",
       "enter level 1 (asymmetric).\n",
       "\n",
-      "performing symm preprocessing with leading block size 2990...\n",
+      "performing symm preprocessing with leading block size  2990... \n",
       "preprocessing done with leading block size 2826...\n",
-      "time: 0.00395665s\n",
+      "time: 0.00565477s\n",
       "preparing data variables...\n",
       "start Crout update...\n",
       "finish Crout update...\n",
-      "\ttotal deferrals=80\n",
-      "\tleading block size in=2826\n",
-      "\tleading block size out=2746\n",
-      "\tdiff=80\n",
-      "\tdiag deferrals=14\n",
-      "\tinv-norm deferrals=66\n",
-      "\tdrop ut=35562\n",
-      "\tspace drop ut=60\n",
-      "\tdrop l=35562\n",
-      "\tspace drop l=60\n",
+      "\ttotal deferrals=9\n",
+      "\tleading block size in=2990\n",
+      "\tleading block size out=2817\n",
+      "\tdiff=173\n",
+      "\tdiag deferrals=0\n",
+      "\tinv-norm deferrals=9\n",
+      "\tdrop ut=47645\n",
+      "\tspace drop ut=7337\n",
+      "\tdrop l=47645\n",
+      "\tspace drop l=7337\n",
       "\tmin |kappa_u|=1\n",
-      "\tmax |kappa_u|=2.9844\n",
+      "\tmax |kappa_u|=4.98881\n",
       "\tmin |kappa_l|=1\n",
-      "\tmax |kappa_l|=2.9844\n",
+      "\tmax |kappa_l|=4.98881\n",
       "\tmax |d|=1\n",
-      "time: 0.0169008s\n",
+      "time: 0.0155806s\n",
       "computing Schur complement and assembling Prec...\n",
-      "applying dropping on L_E and U_F with alpha_{L,U}=10,10...\n",
-      "nnz(L_E)=100643/78770, nnz(U_F)=100643/78770...\n",
-      "nnz(S_C)=49836, nnz(L/L_B)=128738/28095, nnz(U/U_B)=128738/28095\n",
-      "dense_thres{1,2}=265540/1500...\n",
+      "\t=================================\n",
+      "\tthe Schur compl. has good size\n",
+      "\t=================================\n",
+      "splitting LB and freeing L took 0.000570666s.\n",
+      "splitting UB and freeing U took 0.00051511s.\n",
+      "applying dropping on L_E and U_F with alpha_{L,U}=3,3...\n",
+      "nnz(L_E)=51977/29167, nnz(U_F)=51977/29167, time: 0.00122208s...\n",
+      "using 4 for Schur computation...\n",
+      "pure Schur computation time: 0.00539931s...\n",
+      "nnz(S_C)=18595, nnz(L/L_B)=70610/18633, nnz(U/U_B)=70610/18633\n",
+      "dense_thres{1,2}=63168/1500...\n",
       "converted Schur complement (S) to dense for last level...\n",
+      "factorizing dense level by RRQR with cond-thres 2.72713e+10...\n",
       "successfully factorized the dense component...\n",
-      "time: 0.02439s\n",
+      "time: 0.010071s\n",
       "\n",
       "finish level 1.\n",
       "\n",
-      "input nnz(A)=44632, nnz(precs)=141018, ratio=3.15957\n",
+      "input nnz(A)=44632, nnz(precs)=90664, ratio=2.03137\n",
       "\n",
-      "multilevel precs building time (overall) is 0.0461221s\n"
+      "multilevel precs building time (overall) is 0.0328081s\n"
      ]
     }
    ],
    "source": [
-    "M = HILUCSI()\n",
-    "M.factorize(A)"
+    "M = HIF()\n",
+    "params = Params()\n",
+    "params['tau_L'] = params['tau_U'] = 0.01\n",
+    "params['kappa'] = params['kappa_d'] = 5.0\n",
+    "params['alpha_L'] = params['alpha_U'] = 3\n",
+    "M.factorize(A, params=params)"
    ]
   },
   {
@@ -182,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M levels are 2, with nnz 141018\n"
+      "M levels are 2, with nnz 90664\n"
      ]
     }
    ],
@@ -203,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solver = FGMRES(M)"
+    "solver = GMRES(M)"
    ]
   },
   {
@@ -215,18 +226,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- FGMRES -\n",
+      "- GMRES -\n",
       "rtol=1e-06\n",
-      "restart=30\n",
+      "restart/cycle=30\n",
       "maxiter=500\n",
-      "kernel: tradition\n",
+      "flex-kernel: tradition\n",
       "init-guess: no\n",
-      "trunc: no\n",
       "\n",
       "Calling traditional GMRES kernel...\n",
       "Enter outer iteration 1...\n",
-      "  At iteration 1 (inner:1), relative residual is 5.01853e-06.\n",
-      "  At iteration 2 (inner:1), relative residual is 1.17415e-08.\n"
+      "  At iteration 1, relative residual is 0.000216346.\n",
+      "  At iteration 2, relative residual is 5.54575e-06.\n",
+      "  At iteration 3, relative residual is 4.62893e-07.\n"
      ]
     }
    ],
@@ -243,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "solver done, with 2 iterations and residule is 1.174147139978338e-08\n"
+      "solver done, with 3 iterations and residule is 5.405694712085073e-06\n"
      ]
     }
    ],
@@ -268,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
