--- a/examples/demo_apply.ipynb
+++ b/examples/demo_apply.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Demo for using `hifir4py` #\n",
-    "In this example, we show how to use `hifir4py` HIFIR preconditioner coupling with the built-in GMRES solver.. The example system is a saddle-point formulation of 3D Stokes equation with Taylor-Hood elements."
+    "In this example, we show how to use `hifir4py` HIFIR preconditioner in its multilevel triangular solve and matrix-vector multiplication, which are the core operations in applying a preconditioner."
    ]
   },
   {
@@ -14,15 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hifir4py import *\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The matrix is stored by the HIFIR native binary format that is leading symmetric block aware. It's worht noting that. The following code shows how to load the matrix."
+    "import numpy as np\n",
+    "from scipy.io import loadmat\n",
+    "from hifir4py import *"
    ]
   },
   {
@@ -31,8 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load matrix and leading block size m\n",
-    "rowptr, colind, vals, shape, _ = read_hifir(\"demo_inputs/A.hilucsi\")"
+    "# load the MATFILE from scipy.io\n",
+    "f = loadmat(\"demo_inputs/data.mat\")\n",
+    "A = f[\"A\"]\n",
+    "b = f[\"b\"].reshape(-1)"
    ]
   },
   {
@@ -51,50 +47,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The system shape is 44632, where the nnz is (2990, 2990)\n"
+      "The system shape is (2990, 2990), where the nnz is 44632\n"
      ]
     }
    ],
    "source": [
     "# A is scipy.sparse.csr_matrix\n",
-    "print(\"The system shape is {}, where the nnz is {}\".format(rowptr[-1], shape))"
+    "print(\"The system shape is {}, where the nnz is {}\".format(A.shape, A.nnz))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rhs vector can be directly loaded from `numpy` ASCII routine"
+    "## Factorize HIF ##"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "b = np.loadtxt('demo_inputs/b.txt')"
+    "Now, let's build the preconditioenr $\\boldsymbol{M}$ with more aggressive options, i.e. `droptol` for L and U factors is 1e-2, `condest` for L, U, and D is 5, and $\\alpha$ for L and U is 3."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert shape[0] == len(b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let's build the preconditioenr $\\boldsymbol{M}$ with default configurations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,44 +81,42 @@
      "text": [
       "\n",
       "=======================================================================\n",
-      "|           Hybrid (Hierarchical) Incomplete Factorizations           |\n",
+      "|           HIF: Hybrid Incomplete Factorization                      |\n",
       "|                                                                     |\n",
-      "| HIF is a package for computing hybrid (hierarchical) incomplete fa- |\n",
-      "| ctorizations with nearly linear time complexity.                    |\n",
+      "| HIF is a package for computing hybrid incomplete factorization      |\n",
+      "| with near linear time complexity.                                   |\n",
       "-----------------------------------------------------------------------\n",
       "\n",
       " > Package information:\n",
       "\n",
-      "\t\t* Copyright (C) The HIF AUTHORS\n",
-      "\t\t* Version: 1.0.0\n",
-      "\t\t* Built on: 11:33:49, Jun  7 2021\n",
+      "\t* Copyright (C) 2019--2021 NumGeom Group at Stony Brook University\n",
+      "\t* Version: 0.1.0\n",
       "\n",
       "=======================================================================\n",
       "\n",
       "Params (control parameters) are:\n",
       "\n",
-      "tau_L                         0.000100\n",
-      "tau_U                         0.000100\n",
-      "kappa_d                       3.000000\n",
-      "kappa                         3.000000\n",
-      "alpha_L                       10.000000\n",
-      "alpha_U                       10.000000\n",
+      "tau_L                         0.010000\n",
+      "tau_U                         0.010000\n",
+      "kappa_d                       5.000000\n",
+      "kappa                         5.000000\n",
+      "alpha_L                       3.000000\n",
+      "alpha_U                       3.000000\n",
       "rho                           0.500000\n",
       "c_d                           10.000000\n",
       "c_h                           2.000000\n",
       "N                             -1\n",
       "verbose                       info\n",
       "rf_par                        1\n",
-      "reorder                       Auto\n",
+      "reorder                       Off\n",
       "spd                           0\n",
       "check                         yes\n",
       "pre_scale                     0\n",
       "symm_pre_lvls                 1\n",
       "threads                       0\n",
-      "mumps_blr                     1\n",
       "fat_schur_1st                 0\n",
       "rrqr_cond                     0.000000\n",
-      "pivot                         off\n",
+      "pivot                         auto\n",
       "gamma                         1.000000\n",
       "beta                          1000.000000\n",
       "is_symm                       0\n",
@@ -152,54 +128,61 @@
       "\n",
       "performing symm preprocessing with leading block size  2990... \n",
       "preprocessing done with leading block size 2826...\n",
-      "time: 0.00519876s\n",
+      "time: 0.00360131s\n",
       "preparing data variables...\n",
       "start Crout update...\n",
       "finish Crout update...\n",
-      "\ttotal deferrals=80\n",
+      "\ttotal deferrals=1\n",
       "\tleading block size in=2990\n",
-      "\tleading block size out=2746\n",
-      "\tdiff=244\n",
-      "\tdiag deferrals=14\n",
-      "\tinv-norm deferrals=66\n",
-      "\tdrop ut=35562\n",
-      "\tspace drop ut=60\n",
-      "\tdrop l=35562\n",
-      "\tspace drop l=60\n",
+      "\tleading block size out=2825\n",
+      "\tdiff=165\n",
+      "\tdiag deferrals=0\n",
+      "\tinv-norm deferrals=1\n",
+      "\tdrop ut=113670\n",
+      "\tspace drop ut=22023\n",
+      "\tdrop l=113670\n",
+      "\tspace drop l=22023\n",
       "\tmin |kappa_u|=1\n",
-      "\tmax |kappa_u|=2.9844\n",
+      "\tmax |kappa_u|=4.77626\n",
       "\tmin |kappa_l|=1\n",
-      "\tmax |kappa_l|=2.9844\n",
+      "\tmax |kappa_l|=4.77626\n",
       "\tmax |d|=1\n",
-      "time: 0.0234758s\n",
+      "time: 0.0237231s\n",
       "computing Schur complement and assembling Prec...\n",
       "\t=================================\n",
-      "\tthe Schur compl. has good size\n",
+      "\tthe Schur complement has good size\n",
       "\t=================================\n",
-      "splitting LB and freeing L took 0.00106249s.\n",
-      "splitting UB and freeing U took 0.00108128s.\n",
-      "applying dropping on L_E and U_F with alpha_{L,U}=10,10...\n",
-      "nnz(L_E)=100643/78770, nnz(U_F)=100643/78770, time: 0.000971111s...\n",
+      "splitting LB and freeing L took 0.000720598s.\n",
+      "splitting UB and freeing U took 0.00078849s.\n",
+      "applying dropping on L_E and U_F with alpha_{L,U}=3,3...\n",
+      "nnz(L_E)=53031/30145, nnz(U_F)=53031/30145, time: 0.00131117s...\n",
       "using 4 for Schur computation...\n",
-      "pure Schur computation time: 0.0108929s...\n",
-      "nnz(S_C)=49836, nnz(L/L_B)=128738/28095, nnz(U/U_B)=128738/28095\n",
-      "dense_thres{1,2}=265540/1500...\n",
+      "pure Schur computation time: 0.00542072s...\n",
+      "nnz(S_C)=16953, nnz(L/L_B)=85269/32238, nnz(U/U_B)=85269/32238\n",
+      "dense_thres{1,2}=61032/2000...\n",
       "converted Schur complement (S) to dense for last level...\n",
       "factorizing dense level by RRQR with cond-thres 2.72713e+10...\n",
       "successfully factorized the dense component...\n",
-      "time: 0.0179087s\n",
+      "time: 0.0106012s\n",
       "\n",
       "finish level 1.\n",
       "\n",
-      "input nnz(A)=44632, nnz(precs)=141018, ratio=3.15957\n",
+      "input nnz(A)=44632, nnz(precs)=114848, ratio=2.57322\n",
       "\n",
-      "multilevel precs building time (overall) is 0.0493023s\n"
+      "multilevel precs building time (overall) is 0.0398237s\n"
      ]
     }
    ],
    "source": [
-    "M = HIF()\n",
-    "M.factorize(rowptr, colind, vals, shape=shape)"
+    "M = HIF(\n",
+    "    A,\n",
+    "    tau_L=0.01,\n",
+    "    tau_U=0.01,\n",
+    "    kappa=5.0,\n",
+    "    kappa_d=5.0,\n",
+    "    alpha_L=3.0,\n",
+    "    alpha_U=3.0,\n",
+    ")"
    ]
   },
   {
@@ -211,35 +194,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M levels are 2, with nnz 141018\n"
+      "M levels are 2, with nnz 114848\n"
      ]
     }
    ],
    "source": [
-    "print('M levels are {}, with nnz {}'.format(M.levels, M.nnz))"
+    "print(\"M levels are {}, with nnz {}\".format(M.levels, M.nnz))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we solve with the built-in flexible GMRES solver, with default configurations, i.e. restart is 30, relative convergence tolerance is 1e-6, and maximum allowed iterations are 500."
+    "Alternatively, one can use the following codes:\n",
+    "\n",
+    "```python\n",
+    "M = HIF()\n",
+    "params=Params()\n",
+    "params.tau = 1e-2  # equiv. to params[\"tau_L\"]=params[\"tau_U\"]=1e-2\n",
+    "params.kappa = 5.0\n",
+    "params.alpha = 3.0\n",
+    "M.factorize(A, params=params)\n",
+    "```\n",
+    "or\n",
+    "```python\n",
+    "M = HIF()\n",
+    "M.factorize(A,\n",
+    "    tau_L=0.01,\n",
+    "    tau_U=0.01,\n",
+    "    kappa=5.0,\n",
+    "    kappa_d=5.0,\n",
+    "    alpha_L=3.0,\n",
+    "    alpha_U=3.0,\n",
+    ")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply HIF ##\n",
+    "We now consider applying `M` in triangular solve and matrix-vector multiplication two modes."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "norm2(err)/norm2(b) = 1.439076582138997e-17\n"
+     ]
+    }
+   ],
    "source": [
-    "solver = GMRES(M)"
+    "x = M.apply(b)\n",
+    "err = M.apply(x, op=\"M\") - b\n",
+    "print(\"norm2(err)/norm2(b) =\", np.linalg.norm(err)/np.linalg.norm(b))"
    ]
   },
   {
@@ -251,39 +273,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- GMRES -\n",
-      "rtol=1e-06\n",
-      "restart/cycle=30\n",
-      "maxiter=500\n",
-      "flex-kernel: tradition\n",
-      "init-guess: no\n",
-      "\n",
-      "Calling traditional GMRES kernel...\n",
-      "Enter outer iteration 1...\n",
-      "  At iteration 1, relative residual is 5.01853e-06.\n",
-      "  At iteration 2, relative residual is 1.17415e-08.\n"
+      "norm2(err)/norm2(b) = 1.4514835137900503e-17\n"
      ]
     }
    ],
    "source": [
-    "x, iters = solver.solve(rowptr, colind, vals, b, shape=shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "solver done, with 2 iterations and residule is 1.3711755436588413e-07\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('solver done, with {} iterations and residule is {}'.format(iters, solver.resids[-1]))"
+    "# Tranpose\n",
+    "x = M.apply(b, op=\"SH\")\n",
+    "err = M.apply(x, op=\"MH\") - b\n",
+    "print(\"norm2(err)/norm2(b) =\", np.linalg.norm(err)/np.linalg.norm(b))"
    ]
   }
  ],
