--- a/examples/demo_scipy.ipynb
+++ b/examples/demo_scipy.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo for using `hifir4py` with user `Params` and  SciPy sparse matrix#\n",
-    "In this example, we show how to use `hifir4py` HIFIR preconditioner coupling with the built-in GMRES solver.. The example system is a saddle-point formulation of 3D Stokes equation with Taylor-Hood elements."
+    "# Demo for using `hifir4py` with SciPy's GMRES #\n",
+    "In this example, we show how to use `hifir4py` HIFIR preconditioner coupling with the built-in GMRES solver in SciPy. The example system is a saddle-point formulation of 3D Stokes equation with Taylor-Hood elements."
    ]
   },
   {
@@ -14,9 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from scipy.io import loadmat\n",
-    "from hifir4py import *\n",
-    "import numpy as np"
+    "from hifir4py import *"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# load the MATFILE from scipy.io\n",
-    "f = loadmat(\"demo_inputs/matlab.mat\")\n",
+    "f = loadmat(\"demo_inputs/data.mat\")\n",
     "A = f[\"A\"]\n",
     "b = f[\"b\"].reshape(-1)"
    ]
@@ -53,7 +53,7 @@
    ],
    "source": [
     "# A is scipy.sparse.csr_matrix\n",
-    "print('The system shape is {}, where the nnz is {}'.format(A.shape, A.nnz))"
+    "print(\"The system shape is {}, where the nnz is {}\".format(A.shape, A.nnz))"
    ]
   },
   {
@@ -74,17 +74,16 @@
      "text": [
       "\n",
       "=======================================================================\n",
-      "|           Hybrid (Hierarchical) Incomplete Factorizations           |\n",
+      "|           HIF: Hybrid Incomplete Factorization                      |\n",
       "|                                                                     |\n",
-      "| HIF is a package for computing hybrid (hierarchical) incomplete fa- |\n",
-      "| ctorizations with nearly linear time complexity.                    |\n",
+      "| HIF is a package for computing hybrid incomplete factorization      |\n",
+      "| with near linear time complexity.                                   |\n",
       "-----------------------------------------------------------------------\n",
       "\n",
       " > Package information:\n",
       "\n",
-      "\t\t* Copyright (C) The HIF AUTHORS\n",
-      "\t\t* Version: 1.0.0\n",
-      "\t\t* Built on: 11:33:49, Jun  7 2021\n",
+      "\t* Copyright (C) 2019--2021 NumGeom Group at Stony Brook University\n",
+      "\t* Version: 0.1.0\n",
       "\n",
       "=======================================================================\n",
       "\n",
@@ -102,16 +101,15 @@
       "N                             -1\n",
       "verbose                       info\n",
       "rf_par                        1\n",
-      "reorder                       Auto\n",
+      "reorder                       Off\n",
       "spd                           0\n",
       "check                         yes\n",
       "pre_scale                     0\n",
       "symm_pre_lvls                 1\n",
       "threads                       0\n",
-      "mumps_blr                     1\n",
       "fat_schur_1st                 0\n",
       "rrqr_cond                     0.000000\n",
-      "pivot                         off\n",
+      "pivot                         auto\n",
       "gamma                         1.000000\n",
       "beta                          1000.000000\n",
       "is_symm                       0\n",
@@ -123,48 +121,48 @@
       "\n",
       "performing symm preprocessing with leading block size  2990... \n",
       "preprocessing done with leading block size 2826...\n",
-      "time: 0.00565477s\n",
+      "time: 0.00632484s\n",
       "preparing data variables...\n",
       "start Crout update...\n",
       "finish Crout update...\n",
-      "\ttotal deferrals=9\n",
+      "\ttotal deferrals=1\n",
       "\tleading block size in=2990\n",
-      "\tleading block size out=2817\n",
-      "\tdiff=173\n",
+      "\tleading block size out=2825\n",
+      "\tdiff=165\n",
       "\tdiag deferrals=0\n",
-      "\tinv-norm deferrals=9\n",
-      "\tdrop ut=47645\n",
-      "\tspace drop ut=7337\n",
-      "\tdrop l=47645\n",
-      "\tspace drop l=7337\n",
+      "\tinv-norm deferrals=1\n",
+      "\tdrop ut=113670\n",
+      "\tspace drop ut=22023\n",
+      "\tdrop l=113670\n",
+      "\tspace drop l=22023\n",
       "\tmin |kappa_u|=1\n",
-      "\tmax |kappa_u|=4.98881\n",
+      "\tmax |kappa_u|=4.77626\n",
       "\tmin |kappa_l|=1\n",
-      "\tmax |kappa_l|=4.98881\n",
+      "\tmax |kappa_l|=4.77626\n",
       "\tmax |d|=1\n",
-      "time: 0.0155806s\n",
+      "time: 0.0548212s\n",
       "computing Schur complement and assembling Prec...\n",
       "\t=================================\n",
-      "\tthe Schur compl. has good size\n",
+      "\tthe Schur complement has good size\n",
       "\t=================================\n",
-      "splitting LB and freeing L took 0.000570666s.\n",
-      "splitting UB and freeing U took 0.00051511s.\n",
+      "splitting LB and freeing L took 0.000600136s.\n",
+      "splitting UB and freeing U took 0.000611164s.\n",
       "applying dropping on L_E and U_F with alpha_{L,U}=3,3...\n",
-      "nnz(L_E)=51977/29167, nnz(U_F)=51977/29167, time: 0.00122208s...\n",
+      "nnz(L_E)=53031/30145, nnz(U_F)=53031/30145, time: 0.00114683s...\n",
       "using 4 for Schur computation...\n",
-      "pure Schur computation time: 0.00539931s...\n",
-      "nnz(S_C)=18595, nnz(L/L_B)=70610/18633, nnz(U/U_B)=70610/18633\n",
-      "dense_thres{1,2}=63168/1500...\n",
+      "pure Schur computation time: 0.00471401s...\n",
+      "nnz(S_C)=16953, nnz(L/L_B)=85269/32238, nnz(U/U_B)=85269/32238\n",
+      "dense_thres{1,2}=61032/2000...\n",
       "converted Schur complement (S) to dense for last level...\n",
       "factorizing dense level by RRQR with cond-thres 2.72713e+10...\n",
       "successfully factorized the dense component...\n",
-      "time: 0.010071s\n",
+      "time: 0.00871841s\n",
       "\n",
       "finish level 1.\n",
       "\n",
-      "input nnz(A)=44632, nnz(precs)=90664, ratio=2.03137\n",
+      "input nnz(A)=44632, nnz(precs)=114848, ratio=2.57322\n",
       "\n",
-      "multilevel precs building time (overall) is 0.0328081s\n"
+      "multilevel precs building time (overall) is 0.0866918s\n"
      ]
     }
    ],
@@ -193,19 +191,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M levels are 2, with nnz 90664\n"
+      "M levels are 2, with nnz 114848\n"
      ]
     }
    ],
    "source": [
-    "print('M levels are {}, with nnz {}'.format(M.levels, M.nnz))"
+    "print(\"M levels are {}, with nnz {}\".format(M.levels, M.nnz))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we solve with the built-in flexible GMRES solver, with default configurations, i.e. restart is 30, relative convergence tolerance is 1e-6, and maximum allowed iterations are 500."
+    "Now, we solve with the built-in flexible GMRES solver in SciPy. Notice that the GMRES in SciPy is left-preconditioned, which is not recommended."
    ]
   },
   {
@@ -214,52 +212,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solver = GMRES(M)"
+    "from scipy.sparse.linalg import gmres"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- GMRES -\n",
-      "rtol=1e-06\n",
-      "restart/cycle=30\n",
-      "maxiter=500\n",
-      "flex-kernel: tradition\n",
-      "init-guess: no\n",
-      "\n",
-      "Calling traditional GMRES kernel...\n",
-      "Enter outer iteration 1...\n",
-      "  At iteration 1, relative residual is 0.000216346.\n",
-      "  At iteration 2, relative residual is 5.54575e-06.\n",
-      "  At iteration 3, relative residual is 4.62893e-07.\n"
+      "At iteration 1, residual is 0.03726697689855636\n",
+      "At iteration 2, residual is 0.004555930822500451\n",
+      "At iteration 3, residual is 0.0005254851747732505\n",
+      "At iteration 4, residual is 4.8775926768822654e-05\n",
+      "At iteration 5, residual is 4.3329265915834745e-06\n",
+      "At iteration 6, residual is 3.830896351600058e-07\n"
      ]
     }
    ],
    "source": [
-    "x, iters = solver.solve(A, b)"
+    "iters = 0\n",
+    "def counter(res=None):\n",
+    "    global iters\n",
+    "    iters += 1\n",
+    "    print(\"At iteration {}, residual is {}\".format(iters, res))\n",
+    "x, flag = gmres(A, b, M=M.to_scipy(), callback=counter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "solver done, with 3 iterations and residule is 5.405694712085073e-06\n"
+      "solver done, flag=0, res=3.7186961167705056e-07\n"
      ]
     }
    ],
    "source": [
-    "print('solver done, with {} iterations and residule is {}'.format(iters, solver.resids[-1]))"
+    "print(\"solver done, flag={}, res={}\".format(flag, np.linalg.norm(b-A.dot(x))/np.linalg.norm(b)))"
    ]
   }
  ],
