--- a/examples/demo_pipit.ipynb
+++ b/examples/demo_pipit.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Demo for using `hifir4py` with its PIPIT solver #\n",
-    "In this example, we show how to use `hifir4py` HIFIR-preconditioned PIPIT solver for seeking the pseudoinverse solution of a linear elasiticity system with pure traction boundary conditions discretized by FEM. Note that this system has six-dimensional nullspace."
+    "In this example, we show how to use `hifir4py` HIFIR-preconditioned PIPIT solver for seeking the pseudoinverse solution of a linear elasticity system with pure traction boundary conditions discretized by FEM. Note that this system has six-dimensional nullspace."
    ]
   },
   {
